refactor: collect를 tolist로 변경